# silver-hill-mumc-website

./: AWS_SETUP.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
docs/: brand.md  contact-us.md  giving.md  index.md  new-here.md  online-worship.md  podcast.md
docs/about/: beliefs.md  index.md  leadership.md
docs/get-involved/: index.md  ministries.md  outreach.md  volunteer.md
docs/history/: index.md
docs/overrides/partials/: favicon.html
docs/policies/: index.md  safe-sanctuary-flyer.html  safe-sanctuary.md
docs/resources/: bible-study.md  documents.md  index.md
docs/stylesheets/: extra.css
docs/worship/: events.md  index.md  services.md
