[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "silver-hill-mumc-website"
version = "1.0.0"
description = "Silver Hill Memorial United Methodist Church Website"
authors = [
    {name = "Silver Hill Memorial UMC", email = "info@silverhillmumc.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Religion",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.5.0,<10.0.0",
    "mkdocs-minify-plugin>=0.7.0,<1.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0,<2.0.0",
    "mkdocs-glightbox>=0.3.0,<1.0.0",
    "pillow>=10.0.0,<11.0.0",
    "cairosvg>=2.7.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "black>=23.7.0,<24.0.0",
    "flake8>=6.0.0,<7.0.0",
    "isort>=5.12.0,<6.0.0",
    "pre-commit>=3.3.0,<4.0.0",
]

[project.urls]
Homepage = "https://silverhillmumc.com"
Repository = "https://github.com/your-org/silver-hill-mumc-website"
Documentation = "https://github.com/your-org/silver-hill-mumc-website/blob/main/README.md"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]